WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116389
REGRESSION(
r150305
): WebKit2 build broken with INDEXED_DATABASE enabled
https://bugs.webkit.org/show_bug.cgi?id=116389
Summary
REGRESSION(r150305): WebKit2 build broken with INDEXED_DATABASE enabled
Carlos Garcia Campos
Reported
2013-05-18 02:25:35 PDT
../../Source/WebKit2/WebProcess/WebPage/WebPageGroupProxy.cpp: In constructor 'WebKit::WebPageGroupProxy::WebPageGroupProxy(const WebKit::WebPageGroupData&)': ../../Source/WebKit2/WebProcess/WebPage/WebPageGroupProxy.cpp:66:84: error: 'class WebKit::WebKeyValueStorageManager' has no member named 'indexedDBDatabaseDirectory' In file included from ../../Source/WebKit2/WebProcess/WebPage/WebPageGroupProxy.cpp:29:0: ../../Source/WebKit2/WebProcess/WebProcess.h: In instantiation of 'T* WebKit::WebProcess::supplement() [with T = WebKit::WebKeyValueStorageManager]': ../../Source/WebKit2/WebProcess/WebPage/WebPageGroupProxy.cpp:65:116: required from here ../../Source/WebKit2/WebProcess/WebProcess.h:90:70: error: invalid static_cast from type 'WTF::HashMap<const char*, WTF::OwnPtr<WebKit::WebProcessSupplement>, WTF::PtrHash<const char*> >::MappedPeekType {aka WebKit::WebProcessSupplement*}' to type 'WebKit::WebKeyValueStorageManager*' ../../Source/WebKit2/WebProcess/WebProcess.h: In member function 'T* WebKit::WebProcess::supplement() [with T = WebKit::WebKeyValueStorageManager]': ../../Source/WebKit2/WebProcess/WebProcess.h:91:5: warning: control reaches end of non-void function [-Wreturn-type] make[1]: *** [Source/WebKit2/WebProcess/WebPage/libwebkit2gtk_3_0_la-WebPageGroupProxy.lo] Error 1 There's no longer WebKeyValueStorageManager in the web process after
r150305
Attachments
Fix the build
(1.95 KB, patch)
2013-05-18 02:27 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-05-18 02:27:55 PDT
Created
attachment 202197
[details]
Fix the build I'm not sure whether this is the right fix or it should be moved to the ui process now, but it fixes the build for now.
Zan Dobersek
Comment 2
2013-05-18 04:27:58 PDT
***
Bug 116390
has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 3
2013-05-18 14:21:58 PDT
***
Bug 116396
has been marked as a duplicate of this bug. ***
Martin Robinson
Comment 4
2013-05-18 16:13:47 PDT
Comment on
attachment 202197
[details]
Fix the build Going to review and land this one since it's a build fix, which means it's blocking forward progress. If someone has a better idea for how to fix this let's work it out later.
Martin Robinson
Comment 5
2013-05-18 16:14:40 PDT
Comment on
attachment 202197
[details]
Fix the build Clearing flags on attachment: 202197 Committed
r150344
: <
http://trac.webkit.org/changeset/150344
>
Martin Robinson
Comment 6
2013-05-18 16:14:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug