REGRESSION(r150305): WebKit2 build broken with INDEXED_DATABASE enabled https://bugs.webkit.org/show_bug.cgi?id=116389

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2013-05-18
Reviewed by Martin Robinson.

There's no longer WebKeyValueStorageManager in the web process
after r150305.

* WebProcess/WebPage/WebPageGroupProxy.cpp:
(WebKit::WebPageGroupProxy::WebPageGroupProxy):

Canonical link: https://commits.webkit.org/134762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150344 268f45cc-cd09-0410-ab3c-d52691b4dbfc